--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -33,7 +33,7 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
-  font-size: 1.25em;
+  font-size: 1.25rem;
   line-height: 30px;
   /* or 111% */
 
