--- a/src/MatchesAndRequests.module.css
+++ b/src/MatchesAndRequests.module.css
@@ -3,7 +3,8 @@
 
   text-align: left;
 
-  right: 0;
+  width: 25%;
+  left: 75%;
   top: 305px;
   overflow: hidden;
 
